dev : update databaseCofiguration to be read through azure configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-server.port=8083
-spring.datasource.url=jdbc:mysql://ds-mysql-db.mysql.database.azure.com:3306/user?useSSL=true
-spring.datasource.username=dsSqlUser
-spring.datasource.password=dsbmiDB86
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.port=8083
+#spring.datasource.url=${db_url}
+#spring.datasource.username=${db_username}
+#spring.datasource.password=${db_password}
 spring.jpa.hibernate.ddl-auto=update
