--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.port=8083
-#spring.datasource.url=${db_url}
-#spring.datasource.username=${db_username}
-#spring.datasource.password=${db_password}
+server.port=8083
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
 spring.jpa.hibernate.ddl-auto=update
